--- a/index.html
+++ b/index.html
@@ -1,56 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unlock Viral AI Tools</title>
-    <style>
-        body {
-            background: #f8f4f2;
-            color: #222;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 40px 20px;
-        }
-        .container {
-            max-width: 500px;
-            margin: auto;
-        }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 0.3em;
-        }
-        p {
-            font-size: 1.1em;
-            color: #555;
-            margin-bottom: 2em;
-        }
-        a.button {
-            display: inline-block;
-            padding: 15px 30px;
-            background: #ff6b6b;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: bold;
-            transition: background 0.3s ease;
-        }
-        a.button:hover {
-            background: #e85656;
-        }
-        .footer {
-            margin-top: 40px;
-            font-size: 0.9em;
-            color: #aaa;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Free Digital Marketing Class</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f4;
+      color: #222;
+    }
+
+    .container {
+      max-width: 700px;
+      margin: auto;
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    .header {
+      background: linear-gradient(to right, #1a2980, #26d0ce);
+      color: white;
+      padding: 40px 20px;
+      border-radius: 10px;
+    }
+
+    .header h1 {
+      margin: 0 0 20px;
+    }
+
+    .header p {
+      font-size: 1.1em;
+    }
+
+    .media {
+      margin: 30px 0;
+    }
+
+    .media img, .media iframe {
+      width: 100%;
+      max-width: 100%;
+      border-radius: 10px;
+    }
+
+    .btn {
+      display: inline-block;
+      background: #ff7f50;
+      color: white;
+      padding: 15px 25px;
+      font-size: 1.2em;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      margin-top: 20px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #e86c3f;
+    }
+
+    .footer {
+      margin-top: 50px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Unlock 3 Viral AI Tools</h1>
-        <p>Discover the tools creators are using to make viral faceless videos & relaxing ASMR content. Limited-time access!</p>
-        <a class="button" href="https://installyourfiles.com/a183305" target="_blank">Unlock Now</a>
-        <div class="footer">No email required • Instant access after offer</div>
+
+  <div class="container">
+    <div class="header">
+      <h1>🚀 Free Class: Digital Marketing & Social Media Strategy</h1>
+      <p>Learn how to grow on Instagram, TikTok & more — and turn followers into real income.</p>
     </div>
+
+    <div class="media">
+      <!-- Replace with video or image -->
+      <!-- Example Video Embed: -->
+      <!-- <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe> -->
+
+      <!-- Example Image -->
+      <img src="https://via.placeholder.com/640x360.png?text=Free+Digital+Marketing+Class" alt="Class Preview">
+    </div>
+
+    <p style="font-size: 1.1em;">This masterclass is 100% free for a limited time.</p>
+
+    <!-- 👇 CHANGE THIS TO YOUR CPA GRIP LOCKER URL 👇 -->
+    <a href="https://installyourfiles.com/1833333" class="btn">Reserve My Spot Now</a>
+
+    <div class="footer">
+      <p>© 2025 Digital Growth Academy. All rights reserved.</p>
+      <p>This offer is available for a limited time only.</p>
+    </div>
+  </div>
+
 </body>
 </html>
